<resources>
    <string name="app_name">PetFeedTwo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="petfeedtwo">PetFeedTwo</string>
    <string name="register">register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="logout">logout</string>
</resources>